<resources>
    <string name="api_all" translatable="false">all</string>
    <string name="app_name">干货</string>
    <string name="about">关于</string>
    <string name="action_about">关于</string>
    <string name="action_settings">设置</string>
    <string name="action_save">保存</string>
    <string name="action_share">分享</string>
    <string name="action_send">发送</string>
    <string name="about_feas_used">支持的特性</string>
    <string name="about_libs_used">使用的开源库</string>
    <string name="nav_android">Android</string>
    <string name="nav_app">APP</string>
    <string name="nav_fun">瞎推荐</string>
    <string name="nav_girls">妹纸</string>
    <string name="nav_ios">iOS</string>
    <string name="nav_others">拓展资源</string>
    <string name="nav_web">前端</string>
    <string name="navigation_drawer_close">关闭抽屉导航</string>
    <string name="navigation_drawer_open">打开抽屉导航</string>
    <string name="main_double_taps">被双击</string>
    <string name="fragment_load_more">加载更多</string>
    <string name="fragment_long_clicked">被长按</string>
    <string name="fragment_refreshed">已更新</string>
    <string name="fragment_no_more">无更多</string>
    <string name="fetching_pic">正在加载图片，请稍后查看</string>
    <string name="nav_collections">收藏</string>
    <string name="share_msg">一条来自APP干货的消息。</string>
    <string name="about_api">来自代码家API http://gank.io</string>
    <string name="about_repository_url">项目地址 https://github.com/IvorHu/RealStuff</string>
    <string name="pic_saved">已保存至</string>
    <string name="about_icon_source">部分图标来源 https://icons8.com</string>
    <string name="about_intro">每日分享 妹子图 和 技术干货</string>
    <string name="frag_is_fetching">正在加载数据，请稍后切换</string>
    <string name="version_name">版本：%1$s</string>
    <string name="action_clear_cache">清除缓存</string>
    <string name="clear_cache_all">全部缓存</string>
    <string name="confirm">确定</string>
    <string name="clear_type">清除 %1$s?</string>
    <string name="network_request_error">请求错误</string>
    <string name="network_server_error">服务器错误</string>
    <string name="network_not_avaiable">请检查网络连接</string>
    <string name="network_timeout">网络连接超时，请重试</string>
    <string name="network_io">网络请求失败，请重试</string>
    <string name="search_tips">搜索文本仅支持：汉字、数字、字母与空格</string>
    <string name="search">搜索  %1$s</string>
    <string name="no_search_cache">无搜索缓存</string>
    <string name="search_all">全部类别</string>
    <string name="nav_search">搜索</string>
    <string name="save_img_failed_without_permission">未获取写存储权限，保存失败</string>
</resources>
