<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false"
            app:contentScrim="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            >

            <LinearLayout
                android:id="@+id/introduction"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true"
                >

                <TextView
                    android:id="@+id/intro_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/about_intro"
                    android:gravity="center"
                    android:layout_marginTop="?attr/actionBarSize"
                    />

                <TextView
                    android:id="@+id/api_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:autoLink="web"
                    android:text="@string/about_api"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:autoLink="web"
                    android:text="@string/about_icon_source"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    />

                <TextView
                    android:id="@+id/github_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:autoLink="web"
                    android:text="@string/about_repository_url"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    />

                <TextView
                    android:id="@+id/version_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="@string/version_name"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    />
            </LinearLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/about_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                >

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/about_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />
</android.support.design.widget.CoordinatorLayout>